--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "diff": "^4.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-diff-viewer": "^3.0.2",
