--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,7 @@
   "devtools_page": "index.html",
   "permissions": [
     "webRequest",
+    "storage",
     "<all_urls>"
   ],
   "content_security_policy": "script-src 'self' 'sha256-AHfgrqgM5Ai5dmFqyIc+5jI2RziNJwexh+8fFFG21tg='; object-src 'self'"
