--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.0",
     "react-diff-viewer": "^3.0.2",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-wisteria": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
